# docfind

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml  copilot-setup-steps.yml  static.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  tests.rs
scripts/: build-demo.sh  build.sh  version.sh
static/: README.md  docfind.js  docfind_bg.wasm  docfind_bg.wasm.br  documents.json  index.html  install.ps1  install.sh  prepare_dataset.py
wasm/: Cargo.toml  index.js
wasm/src/: lib.rs
